# Petrock

./: README.md  meson.build  org.lucamurdoch.PetRock.json  org.lucamurdoch.PetRock.json~  org.lucamurdoch.PetRock.yml  org.lucamurdoch.PetRock.yml~
data/: meson.build  org.lucamurdoch.PetRock.gschema.xml  org.lucamurdoch.PetRock.metainfo.xml.in  org.lucamurdoch.PetRock.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  meson.build  petrock-application.c  petrock-application.h  petrock-window.c  petrock-window.h  petrock-window.ui  petrock.gresource.xml
